chore(refactor): name conventions
