# internal/modules/user/user_routes.go
@@ -24,4 +24,6 @@ func Register(s server.Server, m middleware.Middleware, h Handlers) {
 	group := s.GetApp().Group("api/users")
 	group.Get("/", h.ListUsers)
 	group.Post("/", h.Create)
+
+	group.Get("/me", m.JWT(), h.GetMe)
 }
